--- a/assets/demo.yaml
+++ b/assets/demo.yaml
@@ -21,11 +21,13 @@ spec:
         app: sample-app
     spec:
       containers:
-      - image: ghcr.io/nmeisenzahl/hijack-kubernetes/sample-app:latest
+      - image: ghcr.io/nmeisenzahl/hijack-kubernetes/log4shell-app:latest
         name: sample-app
         ports:
-        - containerPort: 3000
+        - containerPort: 8080
         resources: {}
+        securityContext:
+          runAsUser: 0
 status: {}
 ---
 apiVersion: v1
@@ -38,10 +40,10 @@ metadata:
   namespace: default
 spec:
   ports:
-  - name: 80-3000
-    port: 80
+  - name: http
+    port: 8080
     protocol: TCP
-    targetPort: 3000
+    targetPort: 8080
   selector:
     app: sample-app
   type: ClusterIP
@@ -65,7 +67,7 @@ spec:
           service:
             name: sample-app
             port:
-              number: 80
+              number: 8080
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
